# fml

./: .gitignore  Cargo.toml  LICENSE  README.md  factorio_mod_api.md  go.mod  go.sum  install.sh  main.go  plan.md
.github/workflows/: build.yml  nightly.yml  release.yml
bubbletea/: style.go
bubbletea/mod_list/: list.go  mod_item_delegate.go  model.go  view.go
factorio/: factorio.go  mod.go  mod_sorter.go
factorio/config/: mods_config.go  server_config.go
factorio/requests/: mod_request.go  mods_request.go
internal/factorio/: api.go  mod_config.go  mod_request.go  mod_sorter.go  mods_request.go  request.go  server_config.go
internal/factorio_api.go/: factorio_api.go
internal/tui/: style.go
internal/tui/mod_list/: init.go  list.go  model.go  update.go  view.go
src/: app.rs  config.rs  event.rs  factorio.rs  fml.rs  fml_config.rs  handler.rs  main.rs  ui.rs
src/factorio/: api.rs  installed.rs  installed_mods.rs  mod.rs  mod_list.rs  modification.rs  mods_config.rs  resolver.rs  server_config.rs  server_settings.rs  types.rs
src/factorio/api/: registry.rs
src/fml/: app.rs  event.rs  handler.rs  install_mod_list.rs  installed_mods.rs  manage_mod_list.rs  markdown.rs  mod_downloader.rs  mods.rs  ui.rs  util.rs  widgets.rs
src/fml/handler/: handler.rs  install_mod_details.rs  install_mod_list.rs  install_search.rs  manage_mod_list.rs  quit_popup.rs
src/fml/ui/: draw.rs  install_tab.rs  manage_tab.rs  util.rs
src/fml/widgets/: enabled_list.rs  list.rs  loading.rs  mod_list.rs
tapioca/: style.go
tapioca/mod_list/: keys.go  list.go  mod_item_delegate.go  model.go  style.go  update.go
