[package]
name = "factorio-mod-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
reqwest = { version="0.11.12", features = ["json"] }
serde = { version="1.0.145", features=["derive"] }
serde_json = "1.0.87"
simple_logger = "3.0.0"
tui = "0.19.0"
crossterm = { version="0.25", features = ["event-stream"] }
tokio = { version = "1.21.2", features = ["full"] }
futures-util = "0.3.25"
anyhow = "1.0.66"
better-panic = "0.3.0"
unicode-width = "0.1.10"
dirs = "4.0.0"
serde_yaml = "0.9.14"
textwrap = "0.16.0"
pulldown-cmark = "0.9.2"
zip = "0.6.3"
serde_with = "2.0.1"
regex = "1.6.0"
lazy_static = "1.4.0"
