[package]
name = "fml"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
semver = { version = "1", features = ["serde"] }
zip = "2"
clap = { version = "4", features = ["derive"] }
regex = "1"
